0.40 2020-05-09
- GraphQL::AsyncIterator->map_then now mutates object, returns self

0.39 2020-05-06
- simplify Int and Float implementations
- improve Boolean error-checking
- Convert::Test has an "echo" mutation and optional "timedEcho" subscription
- Subscriptions implemented

0.38 2019-12-08
- error objects now stringify - thanks @jjn1056 for idea
- more tests for directives - thanks @jjn1056
- Support field directives - thanks @yigarashi-9

0.37 2019-11-04
 - fix literal input-object coercion problem - thanks @ccakes
 - add "extensions" field to GraphQL::Error - thanks @cockscomb

0.36 2019-05-01
 - doc improvements

0.35 2019-04-29
 - remove author-mode stuff from affecting make in distro

0.34 2019-04-28
 - List now has "name" that is its "of"'s name

0.33	Thu 21 Feb 22:58:02 GMT 2019
 - update Plugin::Convert docs - thanks @aksonov
 - zap "meaningful comment" as description
 - implement GraphQL::Plugin::Type API, switch DateTime to that

0.32	Tue  5 Feb 02:37:20 GMT 2019
 - metadata and test updates
 - unescape string literals - thanks @chazmcgarvey
 - add block strings - thanks @chazmcgarvey
 - update SDL parsing to current graphql-js, including empty defs of most types
 - make to_doc produce new-style descriptions while from_doc still understands old, so can convert

0.31	Sun  1 Jul 23:10:59 BST 2018
 - Fix non-nullable Enum being misdetected - thanks @mechairoi

0.30	Wed 28 Feb 04:29:50 GMT 2018
 - make variable-type errors JSONable for returning - thanks @nohuhu

0.29	Thu Feb 15 03:40:12 GMT 2018
 - Pegex version that gets line_column right

0.28	Sat Feb 10 18:26:29 GMT 2018
 - fix Enum type-check bug #10

0.27	Fri Feb  9 18:13:35 GMT 2018
 - fix input type-check bug #9

0.26	Sat Dec 30 08:45:37 GMT 2017
 - the "then" of ->all will get each result as array-ref

0.25	Fri Dec 29 12:47:13 GMT 2017
 - more-correct handle of lists and non-null
 - handles Promises if give helper code-refs (type PromiseCode)

0.24	Tue 12 Dec 03:57:18 GMT 2017